--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,6 @@ services:
       MYSQL_DATABASE: recycle_db
       MYSQL_CHARSET: utf8mb4
       MYSQL_COLLATION: utf8mb4_unicode_ci
-    ports:
-      - "3306:3306"
     volumes:
       - mysql-data:/var/lib/mysql
     healthcheck:
@@ -42,6 +40,21 @@ services:
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: 1234
       JWT_SECRET: a826ffd6fd03cb43af649c33484461a4bf392ff9861bf66f0d8fe243f864884a
+
+  # ──────────────────────────────────
+  # React Frontend (nginx)
+  # ──────────────────────────────────
+  frontend:
+    build:
+      context: ../RecycleFront
+      dockerfile: Dockerfile
+    container_name: recycle-frontend
+    restart: unless-stopped
+    depends_on:
+      - app
+    ports:
+      - "3000:80"
+
 
 volumes:
   mysql-data:
